Fix end game stats on mobile (#31)

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -23,8 +23,12 @@ a {
 .Overlay {
     position: absolute;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     z-index: 2;
+}
+
+.RightAlign {
+    text-align: right;
 }
 
 #menuContainer {
@@ -52,30 +56,27 @@ a {
 }
 
 .EndGamePlayerInfoContainer {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: 50% 30% 10%;
+    grid-template-rows: repeat(auto-fit, minmax(20px, 1fr));
     border-style: solid;
     border-color: black;
     border-width: 1.5px;
-    margin: 5px 120px 5px 120px;
+    margin: 5px 5px 5px 5px;
     padding: 5px;
 }
 
 .EndGamePlayerInfoContainer div, button {
-    padding: 0px 20px 0px 20px;
 }
 
 .EndGameStartNewGameButtonContainer {
     border-style: hidden;
+    min-height: 30px;
 }
 
 .EndGameWinningPlayer {
     font-weight: 900;
-    border-style: dotted;
-    border-color: white;
 }
 
 .EndGameSelfPlayer {
